syntax = "proto3";




option go_package = "github.com/sergey23144V/BotanyBackend/servers/g-rpc";

import "ecomorphs.proto";
import "elementary-type.proto";
import "ecomorphs-entity.proto";

package botany;

service TypePlantService {
  rpc CreateTypePlant(CreateTypePlantRequest) returns (TypePlant);

  // Получение сущности по
  rpc GetTypePlant (TypePlant) returns (TypePlant);

  // Обновление сущности по id
  rpc UpdateTypePlant (EcomorphsEntity) returns (TypePlant);

  // Удаление сущности по заголовку
  rpc DeleteTypePlant (TypePlant) returns (BoolResponse);

  // Получение списка всех сущностей
  rpc GetAllTypePlant (EmptyRequest) returns (TypePlantList);
}



message TypePlant {
  string id = 1;
  string title = 2;
  string subtitle = 3;
  repeated EcomorphsEntity ecoType = 4;
}

message TypePlantList {
  repeated TypePlant typePlant = 1;
}


message CreateTypePlantRequest {
  string title = 2;
  string subtitle = 3;
  repeated EcomorphsEntity ecoType = 4;
}

